--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,18 +9,23 @@
 
   <div class ="webbox">
 
-  <div class ="hbox">  상단 </div>
+    <div class ="hbox">  상단 </div>
 
-      <div class= "cbox">   중간 상자
+      <div class= "cbox">  중간 상자
+          <div  class = "mbox">
 
           <div> 이미지 </div>
           <div> 금융상품 </div>
           <div> 공지사항</div>
 
+          </div>
+
       </div>
 
-  <div className ="bbox">  footer  </div>
+  <div class ="bbox">  footer  </div>
 
   </div>
+
+
 </body>
 </html>
