--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -13,22 +13,35 @@
 
 <div class ="webbox">
 
-     <div class ="hbox">  상단 </div>
+      <div class ="hbox">  상단 </div>
 
-    <form method="post">
+
+    <div class= "cbox">
+
+    <div class = "mbox">
+
+       <form class="bbord">
 
             제목 : <input type="text" name="btitle"><br>
-            첨부파일 : <input type="file" name ="bfile"> <br>
-            <textarea id="summernote" name="bcontent"></textarea><br>
+            첨부파일 : <input type="file" name="bfile"> <br>
 
-            <button type="button" onclick="">목록보기</button>
-            <button type="button" onclick="bwrite()">등록</button>
-    </form>
+            <textarea id="text" name="bcontent"></textarea><br>
+
+           <button type="button" href="/bank/board">목록보기</button>
+           <button type="button" onclick="bwrite()">등록</button>
+
+       </form>
 
 
-    <div className ="bbox">  footer  </div>
+     </div>
+
+    </div>
+
+      <div class ="bbox">  footer  </div>
 
 </div>
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
