--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -24,7 +24,7 @@
 
             <div class="page"> </div>
 
-                           <button><a href="/bank/write"> 글쓰기 </a></button>    <!--  관리자만 보이게 하기 -->
+                           <button><a href="/write"> 글쓰기 </a></button>    <!--  관리자만 보이게 하기 -->
 
 
             </div>
