--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -27,7 +27,7 @@
 
             <textarea id="text" name="bcontent"></textarea><br>
 
-           <button type="button" href="/bank/board">목록보기</button>
+           <button type="button" href="/board">목록보기</button>
            <button type="button" onclick="bwrite()">등록</button>
 
        </form>
