--- a/src/main/frontend/src/component/css/SecurityCard.css
+++ b/src/main/frontend/src/component/css/SecurityCard.css
@@ -1,21 +1,81 @@
-/*강현규 2022-12-06 보안카드css작업*/
+/* 2022-12-06 강현규 보안카드 프론트작성 */
 
-/* securitCard */
+/* securitCard 전체 시작 */
 .securitCard{
     margin-top: 10px;
     border: 1px solid black;
-    width: 400px;
-    height: 600px;
+    width: 600px;
+    height: 300px;
     margin : 0 auto;
+    box-shadow: 0 1px 1px rgb(0 0 0 / 30);
 }
+/* securitCard 전체 끝 */
 
 /* main */
 .main{
     display: flex;
-    justify-content: space-between
+    font-weight: bold;
 }
+
+.mainSecutiryContent{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    font-size: 15px;
+    color: #0080FF;
+
+}
+
+.mainSecutiryNumber{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 80px;
+    font-size: 16px;
+}
+
+
+
 /* main */
+/* sub  테이블 시작 */
 .sub{
-    display: flex;
-    flex-wrap: wrap;
+    border-collapse: collapse;
+    font-weight: bold;
+    font-size: 14px;
 }
+/* sub 테이블 끝 */
+/* tr 시작*/
+tr{
+    border: 1px solid #0080FF;
+    height: 38.2px;
+}
+th{
+    width: 60px;
+}
+/* tr 끝*/
+/*securityMainNumber 시작*/
+.securityMainNumber{
+    width: 90px;
+}
+/*securityMainNumber 시끝/
+/*securitysubNumber 시작*/
+.securitysubNumber{
+    background-color:#0080FF;
+    color:white;
+    width: 30px;
+}
+/*securitysubNumber 끝*/
+/*warningMainContent 시작*/
+.warningMainContent{
+    color: red;
+    font-weight: bold;
+    font-size: 13px;
+}
+/*warningMainContent 끝*/
+/*warningSubContent 시작*/
+.warningSubContent{
+    color: red;
+    font-size: 11px;
+}
+/*warningSubContent 끝*/
+
+
