12/07 페이징처리 마무리 및 게시물 상세조회

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 
   <div class ="webbox">
 
-    <div class ="hbox">  상단 </div>
+    <div class ="hbox"> 개인  기업 자산관리 금융 상품 카드  전체메뉴 </div>
 
       <div class= "cbox">  중간 상자
           <div  class = "mbox">
@@ -22,7 +22,11 @@
 
       </div>
 
-  <div class ="bbox">  footer  </div>
+
+  <div class ="bbox">
+      은행소개  |  영업점안내  |  고객광장  |  개인정보처리방침  |  신용정보활용체제  |  개인신용정보관리보호
+      사고신고  |  전자민원접수  |  보호금융상품등록부  |  상품공시실  |  보안센터  |  웹접근성 이용안내
+  </div>
 
   </div>
 
