--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title> 십프로 은행</title>
-    <link href="../css/index.css" rel="stylesheet">
+    <link href="../css/board.css" rel="stylesheet">
 </head>
  <body>
 
 <div class ="webbox">
 
-      <div class ="hbox">  개인  기업 자산관리 금융 상품 카드  전체메뉴 </div>
+      <div class ="hbox"> <div> 로고 이미지 </div> <div> 개인  기업 자산관리 금융 상품 카드  전체메뉴</div> </div>
 
         <div class= "cbox">
 
