--- a/src/main/resources/templates/bdetail.html
+++ b/src/main/resources/templates/bdetail.html
@@ -27,10 +27,10 @@
         <span> <div>첨부파일</div> <div id="file">  </div></span>
 
 
-        <button> 목록</button>
+        <a href ="/blist"><button> 목록</button></a>
 
-        <button type="button" onclick="delboard()">  삭제</button>
-        <a href="/board/update"><button type="button" > 수정 </button></a>
+        <button type="button" onclick="del()">  삭제</button>
+        <a href="/"><button type="button" > 수정 </button></a>
 
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
@@ -41,6 +41,8 @@
 
 </div>
 
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script src="/js/detail.js"></script>
 
 
 </body>
