--- a/src/main/frontend/src/component/Bank/account.css
+++ b/src/main/frontend/src/component/Bank/account.css
@@ -3,7 +3,7 @@
     height : 800px;
     width : 1200px;
     margin : 0 auto;
-   border : 1px solid red;
+   border : 2px solid #6c7a81;
     justify-content: space-between;
 }
 /*캘린더*/
@@ -19,12 +19,12 @@
 .acdate {
     width: 650px;
     height: 800px;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 
 }
 .calender{
     border : solid 2px #4c5e66;
-     height : 450px;
+     height : 400px;
      border-radius : 5px;
      padding: 20px;
 }
@@ -40,17 +40,23 @@ margin : 0 auto;
 
 }
 /*---------------------------*/
+.billdate h1{
+    border-bottom : solid 3px black;
+    margin : 10px;
+    text-align: center;
 
+}
 
 /*입금 인풋 */
 .ainput{
-width : 200px;
+width : 250px;
 height : 40px;
 border : 1px solid #9e9e9e;
 }
 
 /*예금주*/
 .master{
+display :flex;
 width : 100px;
 height : 40px;
 border : 1px solid #9e9e9e;
@@ -63,7 +69,7 @@ border : 1px solid #9e9e9e;
 /*서브 라인*/
 .sub{
    width : 500px;
-    border : 1px solid red;
+
     margin : 0 auto;
 }
 
@@ -75,24 +81,60 @@ border : 1px solid #9e9e9e;
         box-sizing : border-box;
         border : overflow;
 }
+.deal h3{
+      border-bottom : solid 3px black;
+        margin : 10px;
+        text-align: center;
 
+}
 /*최근 은랭*/
 .aside_box{
     width : 500px;
     height : 100px;
-    border : solid 1px yellow;
+   border: solid 1px black;
 
 }
+.aside_box h4{
+    border-bottom : solid 1px black ;
+}
+
 /*입금계좌 박스권*/
 .inputside{
     width : 500px;
-    height : 200px;
+    height: 150px;
       border : solid  1px black ;
 }
 
 /*입금 셀럭터*/
 .bank{
-
+        margin-left : 25px;
       height : 40px;
       width : 100px;
+}
+
+.close {
+    width : 50px;
+    height : 40px;
+
+
+    border-radius : 15px;
+}
+.closinsert{
+
+     width : 400px;
+        height : 40px;
+
+          border-radius : 15px;
+}
+.accinput{
+  float : left;
+  width : 300px;
+  height : 40px;
+  margin-left: 100px;
+  border-radius : 15px;
+
+}
+.datebill{
+    border-bottom : solid 3px black ;
+    margin : 10px;
 }
