--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -37,7 +37,7 @@
     </div>
 
      <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-       <script src="/js/list.js"></script>
+       <script src="../js/list.js"></script>
 
  </body>
 </html>
