--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>십프로 은행</title>
 
-  <link href="../css/index.css"  rel="stylesheet">
+  <link href="../css/board.css"  rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 
@@ -25,9 +25,9 @@
             제목 : <input type="text" name="btitle"><br>
             첨부파일 : <input type="file" name="bfile"> <br>
 
-            <textarea id="text" name="bcontent"></textarea><br>
+            <textarea id="text" name="bcontent"> </textarea><br>
 
-           <button type="button" href="/board">목록보기</button>
+           <button type="button" herf="/board">목록보기</button>
            <button type="button" onclick="bwrite()">등록</button>
 
        </form>
@@ -46,7 +46,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
-<script src="/js/write.js"></script>
+<script src="/js/write.js"> </script>
 
 </body>
 </html>
