--- a/src/main/frontend/src/component/Bank/account.css
+++ b/src/main/frontend/src/component/Bank/account.css
@@ -1,10 +1,14 @@
-*{box-sizing: border-box;}
+*{box-sizing: border-box;
+
+}
 .main{  /*전체 테두리*/
     height : 800px;
     width : 1200px;
     margin : 0 auto;
    border : 2px solid #6c7a81;
     justify-content: space-between;
+    border-radius : 5px;
+
 }
 /*캘린더*/
 .react-calendar{
@@ -19,14 +23,14 @@
 .acdate {
     width: 650px;
     height: 800px;
-    /*border: 1px solid red;*/
-
+    border-left: 2px solid #9e9e9e;;
+    padding: 10px;
 }
 .calender{
     border : solid 2px #4c5e66;
      height : 400px;
      border-radius : 5px;
-     padding: 20px;
+     padding: 12px;
 }
 .calender button{
  border : solid 1px black;
@@ -40,11 +44,26 @@ margin : 0 auto;
 
 }
 /*---------------------------*/
+.billdate{
+  border : solid 2px #4c5e66;
+  margin-top : 10px;
+  padding : 10px;
+  border-radius : 5px;
+  background-color: #e9e7e7d1;
+}
 .billdate h1{
     border-bottom : solid 3px black;
     margin : 10px;
     text-align: center;
 
+}
+.billcontent{
+    border :    solid 1px #9e9e9e;
+    width : 600px;
+    height : 200px;
+    margin : 0 auto;
+    border-radius : 5px;
+background-color: white;
 }
 
 /*입금 인풋 */
@@ -59,27 +78,35 @@ border : 1px solid #9e9e9e;
 display :flex;
 width : 100px;
 height : 40px;
-border : 1px solid #9e9e9e;
+border : px solid #9e9e9e;
 }
 /*
 최근 거래 내역*/
 .nowbill{
- width : 500px;
+ width : 450px;
+ padding : 10px;
+ border : solid 1px #9e9e9e;
+ margin : 0 auto;
+ border-radius : 5px;
+ height : 400px;
+ background-color: #ffffff;
 }
 /*서브 라인*/
 .sub{
    width : 500px;
-
+    padding-top : 10px;
     margin : 0 auto;
 }
 
 /*거래*/
 .deal{
-        border : solid  1px black ;
+        border : solid  1px #4c5e66 ;
         width : 500px;
         height : 500px;
         box-sizing : border-box;
         border : overflow;
+        border-radius: 5px;
+        background-color: #e9e7e7d1;
 }
 .deal h3{
       border-bottom : solid 3px black;
@@ -88,23 +115,31 @@ border : 1px solid #9e9e9e;
 
 }
 /*최근 은랭*/
-.aside_box{
-    width : 500px;
-    height : 100px;
-   border: solid 1px black;
+.aside_box {
+    width: 500px;
+    height: 100px;
+    border: solid 1px #4c5e66;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    /*padding: 15px;*/
+    padding-left : 10px;
 
 }
-.aside_box h4{
-    border-bottom : solid 1px black ;
+.aside_main{
+
+  padding : 10px;
+
 }
 
 /*입금계좌 박스권*/
-.inputside{
-    width : 500px;
+.inputside {
+    width: 500px;
     height: 150px;
-      border : solid  1px black ;
-}
+    border: solid 1px #4c5e66;
+    border-radius: 5px;
+    margin-bottom: 5px;
 
+   }
 /*입금 셀럭터*/
 .bank{
         margin-left : 25px;
@@ -115,9 +150,7 @@ border : 1px solid #9e9e9e;
 .close {
     width : 50px;
     height : 40px;
-
-
-    border-radius : 15px;
+     border-radius : 15px;
 }
 .closinsert{
 
