12/13 게시물 HTML --> REACT 변환중

--- a/src/main/resources/templates/bdetail.html
+++ b/src/main/resources/templates/bdetail.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../css/index.css"  rel="stylesheet">
+
 </head>
 <body>
+
+<link href="../css/index.css"  rel="stylesheet">
+
 <div class ="webbox">
 
   <div class ="hbox">  상단 </div>
@@ -42,7 +45,7 @@
 </div>
 
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="/js/detail.js"></script>
+<script src="../js/detail.js"></script>
 
 
 </body>
