--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>십프로 은행</title>
-
   <link href="../css/board.css"  rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 
 </head>
-<body>
 
-<div class ="webbox">
+
+ <body>
+
+     <div class ="webbox">
 
       <div class ="hbox">  상단 </div>
 
@@ -42,11 +43,13 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>-->
 
-<script src="/js/write.js"> </script>
+
+<script src="../js/write.js"> </script>
+
 
 </body>
 </html>
