--- a/src/main/frontend/src/component/css/DealReport.css
+++ b/src/main/frontend/src/component/css/DealReport.css
@@ -1,19 +1,14 @@
 /*강현규 2022-12-11거래내역 css작성 */
 /*전체 시작 css*/
 .dealReport{
-    margin-left: 60px;
+    margin: 0 auto;
     width: 90%;
+    height: 300px;
 }
 /*전체 끝 css*/
 /*고객 거래내역 시작*/
 .ContentText{
   display: flex;
-}
-.userNameOutput{
-    font-size: 20px;
-    line-height: 23px;
-    vertical-align: top;
-    display: inline-block;
 }
 .DefaultUserName{
     font-size: 20px;
@@ -23,17 +18,21 @@
 }
 /* select option값 시작*/
 .key{
-    margin: 0px 10px;
     height: 25px;
-    width: 175px;
+    margin: 0 10px;
     vertical-align: top;
+    width: 100px;
 }
 /* select option값 끝*/
 /* input태그 시작*/
-.dealReportComtent{
+.dealReportContent{
     font-size: 17px;
     font-weight: 700;
     height: 30px;
+}
+.keyword{
+    height: 25px;
+    width: 220px;
 }
 /* input태그 끝*/
 /*버튼 시작*/
@@ -46,7 +45,12 @@
 /* input태그 끝*/
 /*버튼 시작*/
 .userButton{
-   vertical-align: top;
+    vertical-align: top;
+    margin-left: 10px;
+    width: 70px;
+    height: 25px;
+    padding: 1px;
+    font-size: 15px;
 }
 /*버튼 끝*/
 /*고객 거래내역 끝 css*/
@@ -66,45 +70,50 @@ th{
     border: 1px solid black;
 }
 .orderComponent{
-    width: 10%;
+    width: 25%;
     height: 50px;
 }
 .categoryComponent{
-    width: 15%;
+    width: 25%;
     height: 50px;
 }
 .contentComponent{
-    width: 55%;
+    width: 25%;
     height: 50px;
 }
 .moneyComponent{
-    width: 20%;
+    width: 25%;
     height: 50px;
 }
 /* th내용 끝 css*/
 /* th list들 내용 시작 css*/
 .orderComponentList{
-    height: 20px;
+    height: 25px;
     width: 10%;
 }
 .categoryComponentList{
-    height: 20px;
+    height: 25px;
     width: 15%;
 }
 .contentComponentList{
-    height: 20px;
+    height: 25px;
     width: 55%;
 }
 .moneyComponentList{
-    height: 20px;
+    height: 25px;
     width: 20%;
 }
 /* th list들 내용 끝 css*/
 
 /*pagination시작*/
 .pagination{
-    display: flex;
-    margin-bottom: 10px;
     justify-content: center;
+    margin-top: 10px;
+}
+.pagination li a{
+    width: 15px;
+    margin: 0 3px;
+    font-size: 20px;
+    font-weight: bold;
 }
 /*pagination끝*/
