--- a/src/main/frontend/src/component/css/SecurityCard.css
+++ b/src/main/frontend/src/component/css/SecurityCard.css
@@ -1,5 +1,5 @@
 /* 2022-12-06 강현규 보안카드 프론트작성 */
-
+/* 2022-12-16 강현규 보안카드 css 수정 */
 /* securitCard 전체 시작 */
 .securitCard{
     margin-top: 10px;
@@ -17,33 +17,34 @@
     font-weight: bold;
 }
 /* mainCard 끝 */
-/*mainSecutiryContent 시작*/
+/*mainSecutiryContent 시작 강현규 2022-12-16 수정*/
 .mainSecutiryContent{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 10px;
+    color: #0080ff;
     font-size: 15px;
-    color: #0080FF;
+    margin-bottom: 5px;
+    margin-left: 14px;
+    margin-top: 5px;
 }
 /*mainSecutiryContent 끝*/
-/*mainSecutiryNumber 시작*/
+/*mainSecutiryNumber 시작 강현규 2022-12-16 수정*/
 .mainSecutiryNumber{
     font-size: 16px;
     margin-bottom: 1px;
-    margin-left: 12px;
+    margin-left: 8px;
     margin-top: 2px;
     vertical-align: top;
 }
 /* mainSecutiryNumber 끝 */
-/* subtable  테이블 시작 */
+/* subtable  테이블 시작 강현규 2022-12-16 수정 */
 .subtable{
+    border: 1px solid #000;
     border-collapse: collapse;
-    border: 1px solid rgb(0 0 0);
+    box-shadow: 0 1px 1px #000;
     font-size: 14px;
     font-weight: 700;
     height: 250px;
-    width: 100%;
-    box-shadow: 0 1px 1px #000;
+    width: 95%;
+    margin: 3px auto;
 }
 /* subtable 테이블 끝 */
 /* tr 시작*/
@@ -61,14 +62,20 @@ th{
     text-align: center;
 }
 /*securityMainNumber 시끝/
-/*securitysubNumber 시작*/
+/*securitysubNumber 강현규 2022-12-16 시작*/
 .securitysubNumber{
     background-color:#0080FF;
+    border-bottom: 1px solid #62aef9;
     color:white;
     width: 30px;
     text-align: center;
 }
 /*securitysubNumber 끝*/
+/*warningContent 시작 강현규 2022-12-16 수정 */
+.warningContent{
+    margin: 14px 14px;
+}
+/*warningContent 끝*/
 /*warningMainContent 시작*/
 .warningMainContent{
     color: red;
