2022-12-16 강현규 보안카드, 거래내역 css 수정

--- a/src/main/frontend/src/component/css/SecurityCardPassword.css
+++ b/src/main/frontend/src/component/css/SecurityCardPassword.css
@@ -6,8 +6,7 @@
     justify-content: center;
     margin-top: 10px;
     border: 1px solid black;
-    width: 556px;
-    height: 50px;
+    height: 60px;
     margin : 0 auto;
     box-shadow: 0 1px 1px rgb(0 0 0 / 30);
     font-weight: 400;
@@ -20,17 +19,37 @@
     height: 50px;
 }
 
-.passwordInput{
+/* #passwordInput 시작*/
+/*.passwordInput{
+    margin-top: 10px;
+    margin-left: 10px;
+   text-align: center;
+   width: 50px;
+   height: 24px;
+}*/
+#passwordInput{
     margin-top: 10px;
     margin-left: 10px;
    text-align: center;
    width: 50px;
    height: 24px;
 }
+
+#formGroupPassword{
+    height: 40px;
+    width: 450px;
+    margin: 10px auto;
+}
+/* #passwordInput 끝*/
 .submitButton{
-    margin-top: 10px;
+    height: 40px;
     margin-left: 5px;
-    width: 50px;
-    height: 30px;
+    margin-top: 10px;
+    width: 90px;
+}
+#submitButtonId{
+    font-size: 22px;
     font-weight: 600;
+    text-align: center;
+    line-height: 10px;
 }
