--- a/src/main/frontend/src/component/css/DealReportPassword.css
+++ b/src/main/frontend/src/component/css/DealReportPassword.css
@@ -1,16 +1,13 @@
 /*강현규 2022-12-10 좌번호 4자리 페이지로 거래내역페이지 이동할때 password css 내용*/
 .DealpasswordComponent{
+    border: 1px solid #000;
+    box-shadow: 0 1px 1px #000;
     display: flex;
+    font-weight: 400;
+    height: 60px;
+    justify-content: center;
     margin: 0 auto;
     text-align: center;
-    justify-content: center;
-    margin-top: 10px;
-    border: 1px solid black;
-    width: 558px;
-    height: 50px;
-    margin : 0 auto;
-    box-shadow: 0 1px 1px rgb(0 0 0 / 30);
-    font-weight: 400;
 }
 
 .DealpasswordContent{
@@ -20,17 +17,26 @@
     height: 50px;
 }
 
-.DealpasswordInput{
-    margin-top: 10px;
-    margin-left: 10px;
-   text-align: center;
-   width: 50px;
-   height: 24px;
-}
 .DealsubmitButton{
     margin-top: 10px;
     margin-left: 5px;
     width: 50px;
     height: 30px;
     font-weight: 600;
+}
+
+#formGroupPassword{
+    height: 40px;
+    width: 450px;
+    margin: 10px auto;
+}
+
+
+#submitButtonId{
+    font-size: 22px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 10px;
+    width: 90px;
+    height: 40px;
 }
