2022-12-16 김원종 회원가입 다음 주소 API 구현중

--- a/src/main/frontend/src/component/css/Signup.css
+++ b/src/main/frontend/src/component/css/Signup.css
@@ -1,10 +1,6 @@
 
-/**{
-    width: 600px;
-    margin: 0 auto;
-}*/
 
-.top_title{
+.top_title{/*20220-12-16  김원종 */
     border-bottom: 1px solid black;
     text-align: center;
     border-radius: 50%;
