--- a/src/main/frontend/src/component/Bank/account.css
+++ b/src/main/frontend/src/component/Bank/account.css
@@ -85,8 +85,8 @@ border : 1px solid #9e9e9e;
 
    width : 80px;
    height : 40px;
-
-
+    background-color: #006edc;
+    color : white;
 }
 
 /*
