--- a/src/main/frontend/src/component/css/Signup.css
+++ b/src/main/frontend/src/component/css/Signup.css
@@ -14,3 +14,11 @@
 .signgo{
     margin: 20px 0px;
 }
+.postmodal{
+    background : rgba(0,0,0,0.25);
+    position : fixed;
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+}
