--- a/src/main/frontend/src/component/Bank/account.css
+++ b/src/main/frontend/src/component/Bank/account.css
@@ -160,6 +160,7 @@ border : 1px solid #9e9e9e;
     width : 50px;
     height : 40px;
      border-radius : 15px;
+     float: right;
 }
 .closinsert{
 
